v4.6/本版本变更记录.md
# v4.6 本版本变更记录

日期：2026-08-13

## 本版本文件

- `全能去广告修复版-Shadowrocket-v4.6.sgmodule`

## 改动摘要

- 从 `v4.5` 复制生成 `v4.6` 主模块文件。
- 模块规则逻辑不变，继续保留闪动校园兼容修复。
- 更新模块头部版本号和说明，标记为 GitHub 仓库地址修正版。
- 将 GitHub 上传目标从旧仓库 `wxs0625/-` 更新为新仓库 `wxs0625/quguanggaomokuai`。
- 继续遵守“授权后再上传”的规则，本版本仅完成本地准备和记录。

## GitHub 上传信息

- 目标仓库 SSH 地址：`git@github.com:wxs0625/quguanggaomokuai.git`
- 目标仓库页面：`https://github.com/wxs0625/quguanggaomokuai`
- 本地当前分支：`master`
- GitHub 推荐上传分支：`main`
- 当前状态：仅准备上传说明，尚未执行远端配置或推送。

## 授权后计划执行

```bash
git remote add origin git@github.com:wxs0625/quguanggaomokuai.git
git branch -M main
git push -u origin main
```

如果本地已经存在 `origin`，则改为：

```bash
git remote set-url origin git@github.com:wxs0625/quguanggaomokuai.git
git branch -M main
git push -u origin main
```

## 授权上传后预计链接

- GitHub 文件页：`https://github.com/wxs0625/quguanggaomokuai/blob/main/v4.6/全能去广告修复版-Shadowrocket-v4.6.sgmodule`
- Raw 订阅链接：`https://raw.githubusercontent.com/wxs0625/quguanggaomokuai/main/v4.6/全能去广告修复版-Shadowrocket-v4.6.sgmodule`

## 风险与兼容性

- 本版本没有新增广告拦截规则，不改变 v4.5 的运行行为。
- 闪动校园仍集成在主模块内，不再发布新的单独模块。
- `v4.2` 中的闪动校园单独模块仅作为历史归档保留，当前推荐只使用主模块。

## 校验结果

- 已保留 v4.0 至 v4.5 历史目录和文件。
- 已创建独立 `v4.6` 目录。
- `v4.6` 目录包含模块文件和本版本变更记录。
